[gd_scene load_steps=23 format=3 uid="uid://5x2on57afeoh"]

[ext_resource type="PackedScene" uid="uid://dkw7fi5xn7v14" path="res://components/pickable_object.tscn" id="1_7ujo2"]
[ext_resource type="Script" path="res://components/pickable_image_frame.gd" id="2_1ay1r"]
[ext_resource type="PackedScene" uid="uid://da2qgxxwwitl6" path="res://addons/godot-xr-tools/objects/highlight/highlight_ring.tscn" id="3_d66jv"]
[ext_resource type="Material" uid="uid://bbk5aaachmy4h" path="res://components/orange_material.tres" id="3_fh5ii"]
[ext_resource type="PackedScene" uid="uid://clujaf3u776a3" path="res://addons/godot-xr-tools/objects/viewport_2d_in_3d.tscn" id="5_gqwec"]
[ext_resource type="Material" uid="uid://blvqwdcqr5o28" path="res://components/tablet_background_black_material.tres" id="5_p5pb4"]
[ext_resource type="PackedScene" uid="uid://beh2xxui1np6d" path="res://components/combined_ratings.tscn" id="6_a7dkf"]
[ext_resource type="PackedScene" uid="uid://bsbj2v7r5p0hr" path="res://components/recognition_test.tscn" id="8_22x2b"]

[sub_resource type="BoxShape3D" id="BoxShape3D_b3jbh"]
size = Vector3(0.3, 0.3, 0.025)

[sub_resource type="BoxMesh" id="BoxMesh_y5y5c"]
size = Vector3(0.3, 0.3, 0.025)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_yhewn"]
size = Vector2(1024, 1024)

[sub_resource type="BoxMesh" id="BoxMesh_pulxf"]
size = Vector3(0.3, 0.2, 0.02)

[sub_resource type="QuadMesh" id="QuadMesh_mvrtx"]
resource_local_to_scene = true
size = Vector2(3, 2)

[sub_resource type="ViewportTexture" id="ViewportTexture_xqldx"]
viewport_path = NodePath("Viewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hvjii"]
transparency = 1
cull_mode = 2
shading_mode = 0
albedo_texture = SubResource("ViewportTexture_xqldx")
texture_filter = 1

[sub_resource type="BoxShape3D" id="BoxShape3D_w5k2t"]
resource_local_to_scene = true
size = Vector3(3, 2, 0.02)

[sub_resource type="BoxShape3D" id="BoxShape3D_107ks"]
size = Vector3(0.3, 0.3, 0.03)

[sub_resource type="BoxMesh" id="BoxMesh_a2qap"]
size = Vector3(0.3, 0.2, 0.02)

[sub_resource type="QuadMesh" id="QuadMesh_qwrw5"]
resource_local_to_scene = true
size = Vector2(3, 2)

[sub_resource type="ViewportTexture" id="ViewportTexture_7w2wd"]
viewport_path = NodePath("Viewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fsnpp"]
transparency = 1
cull_mode = 2
shading_mode = 0
albedo_texture = SubResource("ViewportTexture_7w2wd")
texture_filter = 1

[sub_resource type="BoxShape3D" id="BoxShape3D_35n62"]
resource_local_to_scene = true
size = Vector3(3, 2, 0.02)

[node name="PickableImageFrame" groups=["images"] instance=ExtResource("1_7ujo2")]
max_contacts_reported = 5
script = ExtResource("2_1ay1r")
frame_color = null
is_highlighted = false
image_texture = "no_texture_string"
image = null
rating_complete = false
final_ratings = ""
is_new_image = false
elapsed_time = 0.0
confirm_counter = 0
placement_confirmed = false
can_confirm = false
response_to_save = ""
ranged_grab_method = 1

[node name="CollisionShape3D" parent="." index="0"]
shape = SubResource("BoxShape3D_b3jbh")

[node name="Frame" type="Node3D" parent="." index="1"]

[node name="FrameMesh" type="MeshInstance3D" parent="Frame" index="0"]
mesh = SubResource("BoxMesh_y5y5c")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("3_fh5ii")

[node name="Image" type="Sprite3D" parent="." index="2"]
transform = Transform3D(0.027, 0, 0, 0, 0.027, 0, 0, 0, 0.027, 0, 0, 0.013)
shaded = true
texture = SubResource("PlaceholderTexture2D_yhewn")

[node name="HighlightRing" parent="." index="3" instance=ExtResource("3_d66jv")]

[node name="RatingTablet" type="Node3D" parent="." index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.305453, -0.00655177)

[node name="MeshInstance3D" type="MeshInstance3D" parent="RatingTablet" index="0"]
transform = Transform3D(1, 0, 0, 0, 1.17709, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("BoxMesh_pulxf")
surface_material_override/0 = ExtResource("5_p5pb4")

[node name="Viewport2Din3D" parent="RatingTablet/MeshInstance3D" index="0" instance=ExtResource("5_gqwec")]
transform = Transform3D(0.095, 0, 0, 0, 0.095, 0, 0, 0, 0.095, -0.000231519, 0.000231504, 0.0140991)
collision_layer = 5242880
viewport_size = Vector2(750, 400)
unshaded = true

[node name="Viewport" parent="RatingTablet/MeshInstance3D/Viewport2Din3D" index="0"]
size = Vector2i(750, 400)

[node name="CombinedRatings" parent="RatingTablet/MeshInstance3D/Viewport2Din3D/Viewport" index="0" instance=ExtResource("6_a7dkf")]

[node name="Screen" parent="RatingTablet/MeshInstance3D/Viewport2Din3D" index="1"]
mesh = SubResource("QuadMesh_mvrtx")
surface_material_override/0 = SubResource("StandardMaterial3D_hvjii")

[node name="StaticBody3D" parent="RatingTablet/MeshInstance3D/Viewport2Din3D" index="2"]
collision_layer = 5242880
viewport_size = Vector2(750, 400)

[node name="CollisionShape3D" parent="RatingTablet/MeshInstance3D/Viewport2Din3D/StaticBody3D" index="0"]
shape = SubResource("BoxShape3D_w5k2t")

[node name="VisibleLabel" type="Label3D" parent="." index="5"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0.147933, 0.0356976)
layers = 2
billboard = 2
no_depth_test = true
text = "...."

[node name="RayCastHideBehindFurniture" type="RayCast3D" parent="." index="6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.015)
collision_mask = 4096

[node name="RayCast3D" type="RayCast3D" parent="." index="7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.015)
exclude_parent = false
target_position = Vector3(0, 0, 0.77)
collision_mask = 2048
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false
debug_shape_custom_color = Color(0.980392, 0.709804, 0, 1)

[node name="ImageFrameRay" type="RayCast3D" parent="." index="8"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0.015)
exclude_parent = false
target_position = Vector3(0, 0, 0.25)
collision_mask = 1024
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false
debug_shape_custom_color = Color(0, 0.819608, 0.87451, 1)

[node name="ImageArea" type="Area3D" parent="." index="9"]
collision_layer = 1024
collision_mask = 1024

[node name="CollisionShape3D" type="CollisionShape3D" parent="ImageArea" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000366211, 0.00164795, -0.000114441)
shape = SubResource("BoxShape3D_107ks")

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="." index="10"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0133276, 0.02499, 0.00709045)
aabb = AABB(-0.0659989, -0.0961837, -0.0135158, 0.131998, 0.192367, 0.0270315)

[node name="RecognitionTablet" type="Node3D" parent="." index="11"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.293205, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="RecognitionTablet" index="0"]
mesh = SubResource("BoxMesh_a2qap")
surface_material_override/0 = ExtResource("5_p5pb4")

[node name="Viewport2Din3D" parent="RecognitionTablet/MeshInstance3D" index="0" instance=ExtResource("5_gqwec")]
transform = Transform3D(0.09, 0, 0, 0, 0.09, 0, 0, 0, 0.09, 0, 0, 0.0109875)
viewport_size = Vector2(750, 400)
unshaded = true

[node name="Viewport" parent="RecognitionTablet/MeshInstance3D/Viewport2Din3D" index="0"]
size = Vector2i(750, 400)
size_2d_override = Vector2i(750, 400)

[node name="RecognitionTest" parent="RecognitionTablet/MeshInstance3D/Viewport2Din3D/Viewport" index="0" instance=ExtResource("8_22x2b")]

[node name="Screen" parent="RecognitionTablet/MeshInstance3D/Viewport2Din3D" index="1"]
mesh = SubResource("QuadMesh_qwrw5")
surface_material_override/0 = SubResource("StandardMaterial3D_fsnpp")

[node name="StaticBody3D" parent="RecognitionTablet/MeshInstance3D/Viewport2Din3D" index="2"]
viewport_size = Vector2(750, 400)

[node name="CollisionShape3D" parent="RecognitionTablet/MeshInstance3D/Viewport2Din3D/StaticBody3D" index="0"]
shape = SubResource("BoxShape3D_35n62")

[connection signal="rating_confirmed" from="RatingTablet/MeshInstance3D/Viewport2Din3D/Viewport/CombinedRatings" to="." method="_on_combined_ratings_rating_confirmed"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_exited"]
[connection signal="response" from="RecognitionTablet/MeshInstance3D/Viewport2Din3D/Viewport/RecognitionTest" to="." method="_on_recognition_test_response"]

[editable path="RatingTablet/MeshInstance3D/Viewport2Din3D"]
[editable path="RecognitionTablet/MeshInstance3D/Viewport2Din3D"]
